<resources>
    <string name="app_name">UrlsList</string>
    <string name="search_title">Search URL</string>
    <string name="search_hint">Search URL</string>
    <string name="no_data">No data</string>
    <string name="delete_url">delete_url</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="update">Refresh</string>
    <string name="menu_sort">Sort</string>
    <string name="uri_availability_state">State</string>
    <string name="adding_url_hint">Write url here</string>
    <string name="plus_item_image">adding item to urls list</string>
    <string name="no_items">There are no items</string>
    <string name="name_asc">Sort by name ascending</string>
    <string name="name_desc">Sort by name descending</string>
    <string name="by_availability">Sort by availability</string>
    <string name="time_asc">Sort by response time ascending</string>
    <string name="time_desc">Sort by response time descending</string>
    <string name="placeholder_text">Google.com</string>
    <string name="dialog_message">Request for this URL is in progress!</string>
    <string name="fragment_tag">Add url</string>
</resources>
